<LinearLayout
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/file_name1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/file_name"
            android:fontFamily="@font/almendra"
            android:background="@drawable/shape_button"
            android:layout_marginTop="15dp" />
    </android.support.design.widget.TextInputLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <EditText
                    android:id="@+id/content1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="15"
                    android:lines="5"
                    android:gravity="center"
                    android:background="@drawable/edittext_backgroung"
                    android:hint="@string/enter_text_here" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:background="@drawable/shape_button"
                android:id="@+id/save1"
                android:text="@string/save"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>