<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:text="Create / update a new File"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:fontFamily="serif"
        android:layout_marginTop="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/file_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:ems="10"
            android:paddingLeft="5dp"
            android:hint="@string/file_name"
            android:background="@drawable/shape_button"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/almendra"/>
    </android.support.design.widget.TextInputLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="15dp">
                <EditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="15"
                    android:padding="3dp"
                    android:paddingLeft="5dp"
                    android:gravity="bottom|center"
                    android:background="@drawable/edittext_backgroung"
                    android:hint="@string/enter_text_here" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/save"
                android:text="@string/save"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_button"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>